deploy.yaml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: nodepractice
  name: nodepractice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodepractice
  template:
    metadata:
      labels:
        app: nodepractice 
    spec:
      containers:
      - name: nodepractice
        image: germanserr/nodejss:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodepractice
  name: nodepractice
spec:
  # type: LoadBalancer
  ports:
  - port: 3001 
    protocol: TCP
    targetPort: 3001 
  selector:
    app: nodepractice
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: java
  name: java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
      - name: java
        image: germanserr/java:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java
  name: java
spec:
  # type: LoadBalancer
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: java
---
