ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/node/(.*)
        pathType: Prefix
        backend:
          service:
            name: nodepractice
            port:
              number: 3001
      - path: /api/arquetipojava/(.*)
        pathType: Prefix
        backend:
          service:
            name: java
            port:
              number: 8090
  ingressClassName: nginx
